Fix tooltip flicker

--- a/graphs/LineGraph/YScale/style.scss
+++ b/graphs/LineGraph/YScale/style.scss
@@ -5,6 +5,7 @@
   stroke-linecap: round;
   stroke-miterlimit: 10;
   opacity: 0.5;
+  pointer-events: none;
 }
 
 .hui-YScale__label {
